    * Better XMPP compatibility: JIDs are prepared by the applicable
      stringprep profiles; internationalized domain names (IDNs) are
      supported; subscription state changes are only made if allowed, contacts
      cannot push themself on a user's roster; correct stanza errors are
      created.
    * Jabberd14 now supports encrypted connections using the STARTTLS
      stream feature of XMPP.
    * The welcome and the auto-reply message in the jabberd14 configuration
      file can be configured in additional languages and an XMPP compatible
      client will display the appropriate version.
    * The xdb_file module allows two directory layouts. The classic jabberd14
      layout with one big directory containing all files for one domain, and
      the layout adopted from wpjabber, where the files are distributed over
      256 * 256 different directories, improoving performance on filesystems,
      that are not well suited for large directories.
    * The size of the files handled by xdb_file can be limited. This prevents
      spool files from getting to big if a user subscribes to a feed and stops
      using his account. Incoming messages will get bounced with an error if
      the spool file of this user is full.
    * jabberd14 now detects HTTP requests and bounces the user to a configured
      URI. This might be especially useful for Jabber servers running on
      port 80.
    * jabberd14 has a new xdb module for storing data in SQL databases,
      currently mysql and postgresql is supported
    * FIX: earlier version of jabberd14 sent out two presences for a user
      that came online, this is fixed - as well as that presences got
      stamped several times if the user was online with multiple resources.
    * New base handler <unsubscribe/> which bounces messages and iqs and sends
      unsubscribes/unsubscribeds as reply to presence stanzas. Intended to be
      used as a replacement for deinstalled transports.