@@ -55,3 +55,6 @@
     * New base handler <unsubscribe/> which bounces messages and iqs and sends
       unsubscribes/unsubscribeds as reply to presence stanzas. Intended to be
       used as a replacement for deinstalled transports.
+    * Presence information can be stored in xdb and therefore (using xdb_sql)
+      in an SQL table. The stored presence information is not used by
+      jabberd itself, but can be used by other applications.
